resources/ej2-base/releasenotes/Xamarin/Release-Notes/v16.4.0.42/SfcomboBox.md
## SfComboBox

### Features
{:#sfcombobox-features}

* \#217952, \#140404, \#219300, \#220400 : Now, support has been provided for the `DropDownOpened`, `DropDownClosed` events and `SelectedDropDownItemColor` property in iOS.

### Bug Fixes
{:#sfcombobox-bug-fixes}

* \#218719, \#218762, \#219982: The `IsEnabled` and `SelectedItem` property work properly in iOS.
* \#220223: Now, the `SelectedItem` can be set to null value.
* \#218651, \#219292: The `SelectedItem` binding works properly in Android and iOS.
* \#218934: The `IsDropDownOpen` property works properly in iOS.
* \#F140539: The DropDownButton is updated properly when using `CustomView`.
* \#218248: The `BackgroundColor` property works properly in UWP.
* \#217952, \#F140404, \#219300, \#220400: The `DropDownOpened`, `DropDownClosed` events are working properly in iOS.
* \#219981: The `BackgroundColor` for the `SfComboBox` is working properly when it is disable state in UWP.
* \#218377: ItemTemplate positioning is properly working in Android.
* \#221507: The view has been properly updated inside the ItemTemplate in Android.
* \#218932: Now, the `SelectionChanged` event is raised properly when SelectedItem is set initially in UWP.
